--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,12 +1,23 @@
 .loginSection{
-    background: url('../../assets/login-bg-1.jpg') no-repeat 0 0;
+    background: url('../../assets/images/black-friday-elements-assortment.jpg') no-repeat 0 -212px;
+    background-size: cover;
     .whiteBgSec{
-        background-color: white;
+        // background-color: white;
         width:60%;
         margin:0 auto;
+        top: 40px;
+        .whiteBgDiv{
+            width: 100%;
+            min-height: 630px;
+            position: absolute;
+            top: 10%;
+            background-color: white;
+            box-shadow: #575757 5px -9px 29px -8px;
+            // border: 20px solid #575757;
+            border-radius: 10%;
+        }
     }
     .loginLeftSec{
-        margin-top: 8.75% !important;
         left: 51px !important;
     }
     .loginRightSec img{
@@ -16,6 +27,24 @@
     .loginCard{
         padding:20% !important;
         top:30px !important;
+        border:10px solid #FFB24D;
     }
 } 
 
+.mat-card:not([class*=mat-elevation-z]){
+    box-shadow: 0px 4px 22px -1px rgba(0, 0, 0, 0.2), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12) !important;
+}
+.mat-button{
+    margin-right:5% !important;
+}
+
+.logo{
+    border-radius: 50%;
+    /* margin: 0 auto; */
+    margin-left: 41%;
+    /* margin-top: 0%; */
+    top: -20%;
+    position: absolute;
+    border: 10px dashed #FFB24D;
+    width:16%;
+}
