--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,32 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~css-star-rating/scss/star-rating';
+@font-face {
+  font-family: 'Roboto Regular';
+  src: url('./assets/fonts/Roboto-Regular.ttf');
+}
+@font-face {
+  font-family: 'Roboto Bold';
+  src: url('./assets/fonts/Roboto-Bold.ttf');
+}
 html,
 body {
   height: 100%;
 }
 body {
   margin: 0;
+  font-family: 'Roboto Regular';
+}
+
+
+
+.mat-button{
+  background-color: #ffffff;
+  font-weight: bold;
+  margin: 10px 0px !important;
+  color:#575757;
+}
+
+.mat-button:hover{
+  background-color: #fbd13e;
+  color:#575757;
 }
