--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,7 +1,7 @@
 mat-grid-tile{
     background: white;
-    // box-shadow: #003a6c 4px 1px 18px -6px;
-    // border-radius: 10%;
+    box-shadow: #003a6c 4px 1px 18px -6px;
+    border-radius: 10%;
     cursor: pointer;
     p.tileTitle{
         text-align: center;
@@ -18,7 +18,7 @@ mat-grid-tile{
 }
 .imageSize{
     width: 50%;
-    height: 55%;
+    height: 45%;
     margin-bottom: 3%;
 }
 .dashboardSec{
@@ -33,7 +33,7 @@ mat-grid-tile{
     cursor: pointer;
 }
 .price{
-    color:#fbd13e;
+    color:#575757;
     font-weight: bold;
     padding: 10px 0px;
     display: block;
@@ -52,7 +52,7 @@ mat-grid-tile{
     // margin: 0 auto;
     text-align: center;
     // background:linear-gradient(-358deg, #eaeaea, #575757);
-    background-color: #003766;
+    background-color: #e9f5ff;
     // border-radius: 20px 0px 20px 0px;
 }
 
